<resources>
    <string name="app_name">Handy Shopping</string>
    <string name="handy_shopping">HANDY SHOPPING</string>
    <string name="login">Login</string>
    <string name="inserisci_la_mail_e_la_password_per_accedere">Inserisci la mail e la password per accedere</string>
    <string name="mail_pass_pass">Inserisci la mail e la password per registrarti</string>
    <string name="inserisci_la_tua_email_qui">email</string>
    <string name="inserisci_la_tua_password_qui">password </string>
    <string name="accedi">Accedi</string>
    <string name="hai_dimenticato_le_credenziali_clicca_qui_per_recuperarle">Hai dimenticato le credenziali? Clicca qui per recuperarle</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati</string>
    <string name="registrati">Registrati</string>
    <string name="registrazione">Registrazione</string>
    <string name="reinserisci_la_tua_password_qui">conferma password</string>
    <string name="hai_gi_un_account_accedi">Hai già un account? Accedi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="carrello">Carrello</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="home">Home</string>
    <string name="profilo">Profilo</string>
    <string name="il_mio_profilo">Il mio profilo</string>
    <string name="i_miei_acquisti">I miei acquisti</string>
    <string name="i_tuoi_dati">I tuoi dati</string>
    <string name="modifica_il_tuo_nome">Modifica il tuo nome</string>
    <string name="modifica_il_tuo_cognome">Modifica il tuo cognome</string>
    <string name="modifica">Modifica</string>
    <string name="conferma">Conferma</string>
    <string name="la_tua_carta">La tua carta</string>
    <string name="_1234_5678_1234_5678">1234-5678-1234-5678</string>
    <string name="mm_aa">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="acquisti">Acquisti</string>
    <string name="il_tuo_carrello">Il tuo carrello</string>
    <string name="i_tuoi_acquisti">I tuoi acquisti</string>
    <string name="search_hint">Search products...</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="nome">nome</string>
    <string name="cognome">cognome</string>
    <string name="scrivi_qui">Scrivi qui</string>
    <string name="invia">Invia</string>
    <string name="inserisci_vecchia_e_nuova_password">Inserisci vecchia e nuova password</string>
    <string name="vecchia_password">Vecchia password</string>
    <string name="nuova_password">Nuova password</string>
    <string name="prodotti_in_vetrina">Prodotti in vetrina</string>
    <string name="cerca_un_prodotto">cerca un prodotto</string>
    <string name="ciao">Ciao,</string>
    <string name="utente">Utente</string>
    <string name="diventa_npremium">Diventa\nPremium</string>
    <string name="elimina_naccount">Elimina\nAccount</string>
    <string name="faq">FAQ</string>
    <string name="cambia_npassword">Cambia\npassword</string>
    <string name="modifica_password">Modifica password</string>
    <string name="modifica_la_tua_mail">modifica la tua mail</string>
    <string name="la_mail_scelta_non_pu_essere_utilizzata">La mail scelta non può essere utilizzata</string>
    <string name="acquista">Acquista</string>
    <string name="_1">1</string>
    <string name="_0_00">€0.00</string>
    <string name="nome_oggetto">Nome oggetto</string>
    <string name="chiedi_il_reso">Chiedi il reso</string>
    <string name="aquistato_il">Aquistato il</string>
    <string name="unit_acquistate">Unità acquistate</string>
    <string name="premium">premium</string>
    <string name="arriva">Arriva</string>
    <string name="domanda">Domanda</string>
    <string name="risposta">Risposta</string>
    <string name="la_mail_scelta_gi_stata_utilizzata">La mail scelta è già stata utilizzata</string>
    <string name="_50">50%</string>
    <string name="acquista_tutto">Acquista tutto</string>
    <string name="totale_0_00">Totale: €0.00</string>
    <string name="contattaci">Contattaci</string>
    <string name="hai_domande_o_desideri_segnalarci_un_problema_nsentiti_libero_di_contattarci_tramite_il_box_sottostante">Hai domande o desideri segnalarci un problema?\nSentiti libero di contattarci tramite il box sottostante</string>
    <string name="nome_utente">nome utente</string>
    <string name="nome_prodotto">Nome prodotto</string>
    <string name="_0">0</string>
    <string name="aggiungi_al_carrello">Aggiungi al carrello</string>
    <string name="descrizione">Descrizione</string>
    <string name="inserisci_una_recensione">Inserisci una recensione</string>
    <string name="scrivi_qui_la_tua_recensione">Scrivi qui la tua recensione</string>
    <string name="scegli_il_tipo_di_pagamento">Scegli il tipo di pagamento</string>
    <string name="pagamento_unico">Pagamento unico</string>
    <string name="pagamento_a_rate">Pagamento a rate</string>
    <string name="_2_rate_da_0_00">2 rate da €0.00</string>
    <string name="annulla">Annulla</string>
    <string name="modifica_la_tua_recensione">Modifica la tua recensione</string>

</resources>