<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="32dp"
    android:layout_gravity="center"
    android:backgroundTint="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="282dp"
        android:layout_height="285dp"
        android:backgroundTint="#0DEFD4">

        <TextView
            android:id="@+id/textViewInstallment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/scegli_il_tipo_di_pagamento"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupInstallment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInstallment">

            <RadioButton
                android:id="@+id/radioSinglePayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagamento_unico" />

            <RadioButton
                android:id="@+id/radioInstallment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagamento_a_rate" />

        </RadioGroup>

        <SeekBar
            android:id="@+id/seekBarInstallment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:min="2"
            android:max="4"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupInstallment" />

        <TextView
            android:id="@+id/sliderValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/_2_rate_da_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarInstallment" />



        <Button
            android:id="@+id/btnAnnulla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_border"
            android:text="@string/annulla"
            android:textColor="@color/black"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderValue" />

        <Button
            android:id="@+id/btnConferma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_border"
            android:text="@string/conferma"
            android:textColor="@color/black"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderValue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
