<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DettagliProdotto.DettagliProdottoActivity"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_border"
            android:layout_margin="8dp"
            android:padding="3dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/immagine"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Marca"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/immagine" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_prodotto"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/marca" />

        <RatingBar
            android:id="@+id/voto"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:rating="2.5"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/nome" />

        <TextView
            android:id="@+id/tempoSpedizione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="18sp"
            android:text="@string/arriva"
            app:layout_constraintBottom_toBottomOf="@+id/voto"
            app:layout_constraintStart_toEndOf="@+id/voto"
            app:layout_constraintTop_toTopOf="@+id/voto" />


        <TextView
            android:id="@+id/premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium"
            android:textColor="#0c86c4"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tempoSpedizione"
            app:layout_constraintStart_toEndOf="@+id/tempoSpedizione"
            app:layout_constraintTop_toTopOf="@+id/tempoSpedizione"/>

        <TextView
            android:id="@+id/prezzo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_0"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/voto" />

        <TextView
            android:id="@+id/prezzoVecchio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textStyle=""
            app:layout_constraintBottom_toBottomOf="@+id/prezzo"
            app:layout_constraintStart_toEndOf="@+id/prezzo"
            app:layout_constraintTop_toTopOf="@+id/prezzo" />

        <TextView
            android:id="@+id/sconto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/_50"
            android:textColor="#e40105"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/prezzoVecchio"
            app:layout_constraintStart_toEndOf="@+id/prezzoVecchio"
            app:layout_constraintTop_toTopOf="@+id/prezzoVecchio"/>

        <Button
            android:id="@+id/aggiungiCarrello_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/aggiungi_al_carrello"
            android:background="@drawable/button_border"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prezzo" />

        <TextView
            android:id="@+id/descrizione"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/descrizione"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/aggiungiCarrello_button" />


        <TextView
            android:id="@+id/recensione_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inserisci_una_recensione"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/descrizione" />

        <EditText
            android:id="@+id/boxRecensione"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/scrivi_qui_la_tua_recensione"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:background="@drawable/button_border"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/recensione_text" />


        <RatingBar
            android:id="@+id/recensioneRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:rating="0"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/boxRecensione" />

        <Button
            android:id="@+id/inviaRecensione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_border"
            android:text="@string/invia"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/boxRecensione" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recensioniRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/inviaRecensione">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>