<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Altro.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="40dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnRegistrati"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_border"
        android:text="@string/registrati"
        android:textColor="@color/black"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/registrati"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/scrittaLogin"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/inserisci_la_mail_e_la_password_per_accedere"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/inserisci_la_tua_password_qui"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>

    <ImageView
        android:id="@+id/visible"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/view"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintTop_toTopOf="@+id/Password" />

    <ImageView
        android:id="@+id/hidden"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/hidden"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintTop_toTopOf="@+id/Password" />



    <Button
        android:id="@+id/btnAccedi"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_border"
        android:text="@string/accedi"
        android:textColor="@color/black"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Non hai un account?"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/btnAccedi" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily=""
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/titolo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/inserisci_la_tua_email_qui"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@id/Password"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/scrittaLogin" />


    <TextView
        android:id="@+id/titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/handy_shopping"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>